objects/Snapshot_Comparison_Result__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName + &apos; &apos; + Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Snapshot Comparison Results</relationshipLabel>
        <relationshipName>Snapshot_Comparison_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sole_Source__c</fullName>
        <label>Sole Source vs Split</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Snapshot Comparison Result</label>
    <nameField>
        <label>Snapshot Comparison Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Comparison Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>